New landing page

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,37 +1,33 @@
 ---
 title: Instant Info Pages
+menu: home
 ---
 
-<div class="row">
-  <div class="column"
-    <h1>
-      Instant Info Pages
-    </h1>
+<!-- ======= Hero Section ======= -->
+<section id="hero" class="d-flex align-items-center">
 
-        <p>The easiest way to create must-have info pages for your store</p>
-          <div class=pages>
-              <ul>
-                <li>About Us Page</li>
-                <li>Frequently Asked Questions</li>
-                <li>Shipping Policy (coming soon)</li>
-                <li>Return Policy (coming soon)</li>
-                <li>COVID-19 FAQ +Banner (NEW)</li>
-              </ul>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-6 d-lg-flex flex-lg-column justify-content-center align-items-stretch pt-5 pt-lg-0 order-2 order-lg-1" data-aos="fade-up">
+        <div>
+          <h1>Instant Info Pages</h1>
+          <h2>The easiest way to create must-have info pages for your store</h2>
+          <div class="row features">
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">About Us Page</li>
+              <li class="list-group-item">Frequently Asked Questions</li>
+              <li class="list-group-item">Shipping Policy <span class="badge badge-primary badge-pill">coming soon</span></li>
+              <li class="list-group-item">Return Policy <span class="badge badge-primary badge-pill">coming soon</span></li>
+              <li class="list-group-item">COVID-19 FAQ + Banner <span class="badge badge-primary badge-pill">NEW</span></li>
+            </ul>
           </div>
-
-      <div class="appstorebadge">
-          <img src="images/Shopify-App-Store-Badge.png" alt="insantinfopages" width="200">
+          <a href="https://app.instantpagebuilder.net" target="_blank"><img src="/images/Shopify-App-Store-Badge.png" alt="insantinfopages" width="200"></a>
+        </div>
       </div>
-  </div>
-
-  <div class="column"
-    <div class=illustration>
-        <img src="images/ilustra.png" alt="insantinfopages">
+      <div class="col-lg-6 d-lg-flex flex-lg-column align-items-stretch order-1 order-lg-2 hero-img" data-aos="fade-up">
+        <img src="images/ilustra.png" class="img-fluid" alt="insantinfopagesillustration">
+      </div>
     </div>
   </div>
 
-  <div class="row">
-    <div class="center">
-    <p style="text-align: center;"><a href=/>Privacy</a></p>
-    </div>
-  </div>
+</section><!-- End Hero -->
